fixed beta feedback div on mobile

--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -1,258 +1,238 @@
 .mamnoon {
-    padding-top: 132px;
-  
-    @media only screen and (max-width: 992px) {
-      padding-top: 112px;
+  padding-top: 132px;
+
+  @media only screen and (max-width: 992px) {
+    padding-top: 112px;
+  }
+}
+
+.pad {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.pad-sm {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.mb20 {
+  margin-bottom: 20px;
+}
+
+.border-left {
+  border: 4px solid $nadi-red-color;
+  box-sizing: border-box;
+  padding: 0;
+  border-right: 0;
+}
+
+.border-right {
+  border: 4px solid $nadi-red-color;
+  box-sizing: border-box;
+  border-left: 0;
+}
+
+.border-red {
+  border: 5px solid $nadi-red-color;
+  margin-bottom: 50px;
+  display: inline-block;
+  .col-l {
+    width: 50%;
+    display: block;
+    float: left;
+  }
+  .col-r {
+    width: 50%;
+    display: block;
+    float: left;
+
+    div {
+      padding: 40px;
     }
-  
   }
-  
-  .pad {
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-  
-  .pad-sm {
-    padding-top: 25px;
-    padding-bottom: 25px;
-  }
+}
 
-  .mb20 {
-    margin-bottom: 20px;
+.restaurantLogo {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  height: 100%;
+  position: relative;
+  width: 100%;
+  min-height: 80vh;
+
+  svg {
+    width: 20%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
-
-
-  .border-left {
-    border: 4px solid $nadi-red-color;
-    box-sizing: border-box;
-    padding: 0;
-    border-right: 0;
+  @media only screen and (max-width: 768px) {
+    svg {
+      width: 80%;
+    }
   }
+}
 
-  .border-right {
-    border: 4px solid $nadi-red-color;
-    box-sizing: border-box;
-    border-left: 0;
+.lower-margin {
+  margin-bottom: 60px;
+}
+
+.pt20 {
+  padding-top: 20px;
+}
+
+.inblock-red {
+  border: 5px solid $nadi-red-color;
+  display: inline-block;
+  // width: 50%;
+  float: left;
+  color: transparent;
+  background-size: cover;
+  background-position: center center;
+
+  width: 50%;
+  padding-bottom: 50%;
+
+  &:first-child {
+    border-right: 0px;
   }
+}
 
+@media only screen and (max-width: 1220px) {
   .border-red {
-    border: 5px solid $nadi-red-color;
+    .col-r {
+      div {
+        padding: 10px 20px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .border-red {
+    border: 4px solid $nadi-red-color;
     margin-bottom: 50px;
-    display: inline-block;
     .col-l {
-      width: 50%;
-      display: block;
-      float: left;
+      width: 100%;
+      display: inline-block;
     }
     .col-r {
-      width: 50%;
-      display: block;
-      float: left;
-  
+      width: 100%;
+      display: inline-block;
+
       div {
         padding: 40px;
       }
     }
   }
+}
 
-  .restaurantLogo {
-    width: 300px;
-    margin: 0 auto;
-    text-align: center;
-    height: 100%;
-    position: relative;
-    width: 100%;
-    min-height: 80vh;
-  
-    svg {
-      width: 20%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-    @media only screen and (max-width: 768px){
-      svg {
-        width: 80%;
-      }
-    }
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.no-lr-pad {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.mb5 {
+  margin-bottom: 5px;
+}
+
+.mb6 {
+  margin-bottom: 6px;
+}
+
+.mb10 {
+  margin-bottom: 10px;
+}
+
+.mb16 {
+  margin-bottom: 16px;
+}
+
+.no-lr-margin {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+.closeModal {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.ff {
+  h2 {
+    color: $nadi-red-color;
+    text-transform: lowercase;
+    margin-bottom: 24px;
+    font-size: 36px;
   }
 
-  .lower-margin {
-    margin-bottom: 60px;
+  h3 {
+    font-style: italic;
+    font-size: 1em;
+    font-weight: bold;
   }
 
-  .pt20 {
-    padding-top: 20px;
-  }
-
-  .inblock-red {
-    border: 5px solid $nadi-red-color;
-    display: inline-block;
-    // width: 50%;
-    float: left;
-    color: transparent;
-    background-size: cover;
-    background-position: center center;
-  
-    width: 50%;
-    padding-bottom: 50%;
-  
-    &:first-child {
-      border-right: 0px;
-    }
-  }
-
-  @media only screen and (max-width: 1220px) {
-    .border-red {
-      .col-r {
-        div {
-          padding: 10px 20px;
-        }
-      }
-    }
+  a {
+    color: $nadi-red-color;
+    text-decoration: underline;
   }
 
   @media only screen and (max-width: 992px) {
-    .border-red {
-      border: 4px solid $nadi-red-color;
-      margin-bottom: 50px;
-      .col-l {
-        width: 100%;
-        display: inline-block;
-      }
-      .col-r {
-        width: 100%;
-        display: inline-block;
-  
-        div {
-          padding: 40px;
-        }
-      }
-    }
-  
-  
+    padding-top: 0;
   }
+}
 
-  .overflow-x-hidden {
-    overflow-x: hidden;
-  }
-  
-
-  .no-lr-pad {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-
-  .mb5 {
-    margin-bottom: 5px;
-  }
-
-  .mb6 {
-    margin-bottom: 6px;
-  }
-  
-
-  .mb10 {
-    margin-bottom: 10px;
-  }
-
-  
-  .mb16 {
-    margin-bottom: 16px;
-  }
-
-  .no-lr-margin {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
-
-  .closeModal {
-    opacity: 1;
-    cursor: pointer;
-  }
-
-
-  .ff {
-    h2 {
-      color: $nadi-red-color;
-      text-transform: lowercase;
-      margin-bottom: 24px;
-      font-size: 36px;
-    }
-  
-    h3 {
-      font-style: italic;
-      font-size: 1em;
-      font-weight: bold;
-    }
-  
-  
-  
+@media only screen and (max-width: 992px) {
+  .list-of-links {
+    margin-top: 40px;
     a {
-      color: $nadi-red-color;
-      text-decoration: underline;
-    }
-
-  
-    @media only screen and (max-width: 992px) {
-      padding-top: 0; 
-    }
-
-
-  }
-  
-  @media only screen and (max-width: 992px) {
-
-  
-    .list-of-links {
-      margin-top: 40px;
-      a {
-        display: block;
-      }
+      display: block;
     }
   }
-  
-  .display-block {
-    display: block;
-  }
+}
 
+.display-block {
+  display: block;
+}
 
-  .fl-right {
-    float: right;
-  }
+.fl-right {
+  float: right;
+}
 
-  .relative {
-    position: relative;
-  }
+.relative {
+  position: relative;
+}
 
+.half-width2left {
+  width: 65%;
+  float: left;
+  height: 140px;
+  overflow: hidden;
+}
 
-  .half-width2left {
-    width: 65%;
-    float: left;
-    height: 140px;
-    overflow: hidden;
-  }
-  
-  .half-width2right {
-    width: 35%;
-    float: left;
-    height: 140px;
-    overflow: hidden;
-  }
+.half-width2right {
+  width: 35%;
+  float: left;
+  height: 140px;
+  overflow: hidden;
+}
 
+.grey-bg {
+  height: 140px;
+}
 
-  .grey-bg {
-    height: 140px;
-  }  
-
-  .profile{
-    padding-top: 120px;
-        padding-top: 150px;
-    padding-bottom: 120px;
-} 
-
+.profile {
+  padding-top: 120px;
+  padding-top: 150px;
+  padding-bottom: 120px;
+}
 
 .w100 {
   width: 100%;
@@ -339,7 +319,6 @@
   padding-top: 180px;
 }
 
-
 @media only screen and (max-width: 1080px) {
   .pt180 {
     padding-top: 0px;
@@ -400,14 +379,11 @@
   .grey-bg {
     height: 150px;
   }
-
-
 }
 
 ul.no-left-pad {
   padding-left: 0;
 }
-
 
 .w100 {
   td.sm-cell {
@@ -460,7 +436,33 @@ table td div {
   }
 }
 
-
 .w-5 {
   width: 5% !important;
+}
+
+.subpage-header {
+  font-size: 32px;
+  line-height: 46px;
+
+  text-align: center !important;
+
+  @media only screen and (max-width: 992px) {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  @media only screen and (max-width: 640px) {
+    margin-bottom: 10px !important;
+
+    margin-top: 10px !important;
+  }
+
+  line-height: 46px;
+  width: 840px;
+  font-size: 23.9px;
+  margin: 0 auto 20px auto;
+
+  @media only screen and (max-width: 992px) {
+    width: 100%;
+  }
 }
