--- a/src/assets/styles/css/nav3.scss
+++ b/src/assets/styles/css/nav3.scss
@@ -1,25 +1,26 @@
-.beta {
-  border-top: 1px solid #eee;
-  position: fixed;
-  width: 100%;
-  background: white;
-  color: $nadi-red-color;
-  top: 0;
-  z-index: 1000;
-  padding: 5px;
+// .beta {
+//   border-top: 1px solid #eee;
+//   position: fixed;
+//   width: 100%;
+//   background: white;
+//   color: $nadi-red-color;
+//   top: 0;
+//   z-index: 1000;
+//   padding: 5px;
 
-  font-size: 20px;
+//   font-size: 20px;
 
-  @media only screen and (max-width: 1080px) {
-    width: 100%;
-    font-size: 14px;
-  }
+//   @media only screen and (max-width: 1080px) {
+//     width: 100%;
+//     font-size: 14px;
+//   }
 
-  text-align: center;
-  @media only screen and (max-width: 640px) {
-    font-size: 14px;
-  }
-}
+//   text-align: center;
+//   @media only screen and (max-width: 640px) {
+//     font-size: 14px;
+//     z-index: 999;
+//   }
+// }
 
 .trans {
   color: transparent;
